# nasa-weather-contrail

./: README.rst  Standardized_Ops_Plan_DRAFT_FD2E4DE_25508EF041FF3.pages  Taskfile.dist.yml  conf.py  index.rst
Emblem/EPS/: Emblem-CMYK.eps  Emblem-RGB.eps
appendix/: dataformat.rst
apps/wmirsdata/: .gitignore  .pylintrc.toml  README.rst  Taskfile.dist.yml  pyproject.toml
apps/wmirsdata/src/docker/: Dockerfile  Dockerfile.dockerignore  Taskfile.dist.yml
apps/wmirsdata/src/wmirsdata/: __main__.py  cli.py  spool.py  validate.py
apps/wmirsdata/tests/: Taskfile.dist.yml
apps/wmirsdata/tests/wmirsdata/: test_validate.py
apps/wmirsdata/tests/wmirsdata/data/: spam.csv
opsplan/: admin.rst  application.rst  cadets.rst  comms.rst  contingencies.rst  dodsupport.rst  facilities.rst  flightops.rst  general.rst  logistics.rst  pio.rst  safety.rst  staffreq.rst  uniforms.rst
